--- a/main.ipynb
+++ b/main.ipynb
@@ -1651,6 +1651,57 @@
     "plt.ylabel(\"Day of Week\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "39222c6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 1274 entries, 0 to 1319\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column                                    Non-Null Count  Dtype         \n",
+      "---  ------                                    --------------  -----         \n",
+      " 0   vehicle_model                             1274 non-null   object        \n",
+      " 1   battery_capacity_(kwh)                    1274 non-null   float64       \n",
+      " 2   charging_station_id                       1274 non-null   object        \n",
+      " 3   charging_station_location                 1274 non-null   object        \n",
+      " 4   charging_start_time                       1274 non-null   datetime64[ns]\n",
+      " 5   charging_end_time                         1274 non-null   datetime64[ns]\n",
+      " 6   energy_consumed_(kwh)                     1274 non-null   float64       \n",
+      " 7   charging_duration_(hours)                 1274 non-null   float64       \n",
+      " 8   charging_rate_(kw)                        1274 non-null   float64       \n",
+      " 9   charging_cost_(usd)                       1274 non-null   float64       \n",
+      " 10  day_of_week                               1274 non-null   object        \n",
+      " 11  state_of_charge_(start_%)                 1274 non-null   float64       \n",
+      " 12  state_of_charge_(end_%)                   1274 non-null   float64       \n",
+      " 13  distance_driven_(since_last_charge)_(km)  1274 non-null   float64       \n",
+      " 14  temperature_(â°c)                         1274 non-null   float64       \n",
+      " 15  vehicle_age_(years)                       1274 non-null   float64       \n",
+      " 16  charger_type                              1274 non-null   object        \n",
+      " 17  location_type                             1274 non-null   object        \n",
+      " 18  charging_duration_minutes                 1274 non-null   float64       \n",
+      " 19  hour_of_day                               1274 non-null   int32         \n",
+      " 20  time_of_day                               1274 non-null   object        \n",
+      " 21  Estimated Energy Consumed (kWh)           1274 non-null   float64       \n",
+      " 22  Charging Cost Per Hour (USD)              1274 non-null   float64       \n",
+      " 23  Temperature (°F)                          1274 non-null   float64       \n",
+      " 24  Temperature Category                      1274 non-null   category      \n",
+      "dtypes: category(1), datetime64[ns](2), float64(14), int32(1), object(7)\n",
+      "memory usage: 245.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.shape\n",
+    "df.describe()\n",
+    "df.info()"
+   ]
   }
  ],
  "metadata": {
